fix worker name truncation

--- a/assets/stylesheets/right/lists.sass
+++ b/assets/stylesheets/right/lists.sass
@@ -24,12 +24,18 @@
       margin-bottom: 5px
       padding-left: 1px
 
+    .name,
     .slug
       display: inline-block
       overflow: hidden
-      max-width: 150px
       white-space: nowrap
       text-overflow: ellipsis
+
+    .name
+      max-width: 140px
+
+    .slug
+      max-width: 150px
 
     &.open ul
       display: block
